web_extension/content/styles/main.css
:root {
  --text-color-subtle: rgba(250, 250, 250, 0.2);
  --text-color-hover: rgba(250, 250, 250, 0.8);
}

* { margin:0; padding:0; }

background {
  background-size: contain;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;

  position: absolute;
  top: 0; left: 0;
  width: 100%; height: 100%;

  vertical-align: middle;
  text-align: center;
}

body {
  background-color: #000;
  margin: 0;
  padding: 0;

  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;

  font-size: 1.4em;
}

prefetch {
  position: absolute;
  bottom: 0;
  right: 100px;

}

prefetch img {
  width: 10px;
  height: 10px;
}

.show_cache prefetch {
  z-index: 10;
}

.show_cache prefetch img {
  width: 100px;
  height: 100px;
}

version {
  display: block;
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 0.2rem;
  color: rgba(250,250,250,0.4);
  font-size: 0.5rem;
  user-select: none;
  cursor: default;
}

sidebar {
  position: absolute;
  top: 0;
  left: 0;

  padding: 0 1em;
  display: flex;
  align-items: center;

  transition: all 1800ms ease-out;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 200;

  color: rgba(250, 250, 250, 1);
}

sidebar.subtle {
  background-color: rgba(17, 17, 17, 0);
  color: rgba(250, 250, 250, 0.2);
}

sidebar.aggressive {
  color: rgba(250, 250, 250, 1);
}

sidebar.demanding {
  color: rgba(250, 250, 250, 1);
  background-color: rgba(17, 17, 17, 0.8);
}

sidebar:hover { transition: all 700ms ease-out; }

sidebar:hover.subtle {
  color: rgba(250, 250, 250, 1);
  background-color: rgba(17, 17, 17, 0.8);
}

sidebar:hover.aggressive {
  background-color: rgba(17, 17, 17, 0.8);
}

